--- a/src/Spryker/Zed/CompanyBusinessUnitGui/Presentation/ListCompanyBusinessUnit/index.twig
+++ b/src/Spryker/Zed/CompanyBusinessUnitGui/Presentation/ListCompanyBusinessUnit/index.twig
@@ -5,6 +5,10 @@
 {% block head_title widget_title %}
 {% block section_title widget_title %}
 
+{% block action %}
+    {{ createActionButton('/company-business-unit-gui/add-company-business-unit', 'Add Company Business Unit' | trans) }}
+{% endblock %}
+
 {% block content %}
     {% embed '@Gui/Partials/widget.twig' %}
         {% block widget_title -%}
