core-3354 Implemented CompanyBusinessUnit address field.

--- a/src/Spryker/Zed/CompanyBusinessUnitGui/Presentation/ListCompanyBusinessUnit/index.twig
+++ b/src/Spryker/Zed/CompanyBusinessUnitGui/Presentation/ListCompanyBusinessUnit/index.twig
@@ -12,7 +12,7 @@
 {% block content %}
     {% embed '@Gui/Partials/widget.twig' %}
         {% block widget_title -%}
-            <h5>{{ 'List of Companu Business Units' | trans}}</h5>
+            <h5>{{ 'List of Company Business Units' | trans}}</h5>
         {%- endblock %}
         {% block widget_content %}
             {{ companyBusinessUnitTable | raw }}
