TE-8788 Optimised performance for Company GUI (#8078)
TE-8788 Performance issue on company user edit page in Zed UI with ~10k companies

--- a/src/Spryker/Zed/CompanyBusinessUnitGui/Presentation/CompanyUser/company_business_unit.twig
+++ b/src/Spryker/Zed/CompanyBusinessUnitGui/Presentation/CompanyUser/company_business_unit.twig
@@ -1,4 +1,6 @@
-
-{{ form_widget(form, {'id':'company-user_fk_company_business_unit'}) }}
+{{ form_widget(form, {
+    'id': 'company-user_fk_company_business_unit',
+    'attr': {'data-url':  form.vars.url}
+}) }}
 
 <script src="{{ assetsPath('js/spryker-zed-company-user-business-unit-gui-main.js') }}"></script>
