CC-15301 Transformed dropdowns for the Company Management in zed to the input boxes with search and suggestions. (#9251)
CC-15301 Transformed dropdowns for the Company Management in zed to the input boxes with search and suggestions.

--- a/src/Spryker/Zed/CompanyBusinessUnitGui/Presentation/AddCompanyBusinessUnit/index.twig
+++ b/src/Spryker/Zed/CompanyBusinessUnitGui/Presentation/AddCompanyBusinessUnit/index.twig
@@ -1,4 +1,4 @@
-{% extends '@CompanyBusinessUnitGui/_layout/layout.twig' %}
+{% extends '@Gui/Layout/layout.twig' %}
 
 {% set widget_title = 'Create Company Business Unit' | trans %}
 
@@ -25,4 +25,9 @@
 
     {% endembed %}
 
+{% endblock %}
+
+{% block footer_js %}
+    {{ parent() }}
+    <script src="{{ assetsPath('js/spryker-zed-company-business-unit-gui-main.js') }}"></script>
 {% endblock %}
