--- a/src/Spryker/Zed/CompanyBusinessUnitGui/Presentation/CompanyUser/company_business_unit.twig
+++ b/src/Spryker/Zed/CompanyBusinessUnitGui/Presentation/CompanyUser/company_business_unit.twig
@@ -1,3 +1,4 @@
+{# @deprecated not used any more #}
 {{ form_widget(form, {
     'id': 'company-user_fk_company_business_unit',
     'attr': {'data-url':  form.vars.url}
