--- a/src/Spryker/Zed/CompanyBusinessUnitGui/Presentation/ListCompanyBusinessUnit/index.twig
+++ b/src/Spryker/Zed/CompanyBusinessUnitGui/Presentation/ListCompanyBusinessUnit/index.twig
@@ -1,4 +1,4 @@
-{% extends '@CompanyBusinessUnitGui/_layout/layout.twig' %}
+{% extends '@Gui/Layout/layout.twig' %}
 
 {% set widget_title = 'Overview of Company Business Units' | trans %}
 
